test code for Flask-SQLAlchemy (start)

--- a/code/disposable_code/templates/db_test.html
+++ b/code/disposable_code/templates/db_test.html
@@ -5,6 +5,9 @@
     <title>Nature Outing</title>
 </head>
 <body>
-{{ for  }}
+    {% for snow in snows: %}
+    <table>
+        
+    </table>
 </body>
 </html>
