--- a/code/project_app/employees_mgmt/templates/login.html
+++ b/code/project_app/employees_mgmt/templates/login.html
@@ -17,7 +17,7 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                             <div class="card-body">
-                                <form>
+                                <form action="http://localhost:5000/login">
                                     <div class="form-floating mb-3">
                                         <input class="form-control" id="email" type="email"
                                                placeholder="name@example.com"/>
