--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </head>
 <body>
 <h1>This is the index page</h1>
