--- a/code/employees_mgmt_app/app/templates/login.html
+++ b/code/employees_mgmt_app/app/templates/login.html
@@ -17,19 +17,19 @@
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                             <div class="card-body">
-                                <form action="http://localhost:5000/login">
+                                <form method="post" action="http://localhost:5000/login/">
                                     <div class="form-floating mb-3">
-                                        <input class="form-control" id="email" type="email"
+                                        <input class="form-control" id="email" type="email" name="email"
                                                placeholder="name@example.com"/>
                                         <label for="email">Email address</label>
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <input class="form-control" id="password" type="password"
+                                        <input class="form-control" id="password" type="password" name="password"
                                                placeholder="Password"/>
                                         <label for="password">Password</label>
                                     </div>
                                     <div class="d-flex align-item-center justify-content-end mt-4 mb-0">
-                                        <a class="btn btn-primary" href="index.html">Login</a>
+                                        <button type="submit" class="btn btn-primary" >Login</button>
                                     </div>
                                 </form>
                             </div>
