--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Index</title>
-    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-</head>
-<body>
-<h1>This is the index page</h1>
-</body>
-</html>
+{% extends 'gabarit.html' %}
+{% block content %}
+    <h1>This is the content</h1>
+{% endblock content %}
