--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -1,4 +1,29 @@
 {% extends 'gabarit.html' %}
 {% block content %}
-    <h1>This is the content</h1>
+    <h1 class="mt-4">Mon Profil</h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item active">Profil</li>
+    </ol>
+    <div class="row">
+        <div class="col-xl-6">
+            <div class="card mb-4">
+                <div class="card-header">Données personnelles</div>
+                <div class="card-body">
+                    <div class="row mb-3">
+                        <div class="col-xl-6">Nom {{ lname }}</div>
+                        <div class="col-xl-6">Date de naissance {{ birthdate }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6">Prénom {{ fname }}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-6">
+            <div class="card-header">Coordonnées</div>
+        </div>
+        <div class="col-xl-6">
+            <div class="card-header">Données professionnelles</div>
+        </div>
+    </div>
 {% endblock content %}
