--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -19,11 +19,19 @@
                 </div>
             </div>
         </div>
-        <div class="col-xl-6">
-            <div class="card-header">Coordonnées</div>
+        <div class="card mb-4">
+            <div class="col-xl-6">
+                <div class="card-header">Coordonnées</div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-xl-6">Nom {{ lname }}</div>
+                <div class="col-xl-6">Date de naissance {{ birthdate }}</div>
+            </div>
         </div>
-        <div class="col-xl-6">
-            <div class="card-header">Données professionnelles</div>
+        <div class="card mb-4">
+            <div class="col-xl-6">
+                <div class="card-header">Données professionnelles</div>
+            </div>
         </div>
     </div>
 {% endblock content %}
