employee class created

--- a/code/employees_mgmt_app/app/templates/gabarit.html
+++ b/code/employees_mgmt_app/app/templates/gabarit.html
@@ -73,10 +73,10 @@
                     <div>
                         <div class="card-title">Suivez-nous:</div>
                         <div class="fa-3x">
-                            <a href="#"><i class="fab fa-twitter-square"></i></a>
-                            <a href="#"><i class="fab fa-facebook-square"></i></a>
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
-                            <a href="#"><i class="fab fa-github-square"></i></a>
+                            <a href="#"><i class="social-icon fab fa-twitter-square"></i></a>
+                            <a href="#"><i class="social-icon fab fa-facebook-square"></i></a>
+                            <a href="#"><i class="social-icon fab fa-linkedin"></i></a>
+                            <a href="#"><i class="social-icon fab fa-github-square"></i></a>
                         </div>
                     </div>
                 </
