--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -7,9 +7,9 @@
     <div class="row">
         <div class="col-xl-6">
             <div class="card mb-4">
-                <div class="card-header">Données personnelles</div>
+                <div class="card-header">Données Personnelles</div>
                 <div class="card-body">
-                    <div class="row mb-3">
+                    <div class="row">
                         <div class="col-xl-6">Nom {{ lname }}</div>
                         <div class="col-xl-6">Date de naissance {{ birthdate }}</div>
                     </div>
@@ -19,18 +19,36 @@
                 </div>
             </div>
         </div>
-        <div class="card mb-4">
-            <div class="col-xl-6">
+
+        <div class="col-xl-6">
+            <div class="card mb-4">
                 <div class="card-header">Coordonnées</div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-xl-6">Nom {{ lname }}</div>
-                <div class="col-xl-6">Date de naissance {{ birthdate }}</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-xl-6">Email {{ email }}</div>
+                        <div class="col-xl-6">Rue{{ street }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6">N° de téléphone {{ phone_number }}</div>
+                        <div class="col-xl-6">NPA Localité {{ zip }} {{ city }}</div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card mb-4">
-            <div class="col-xl-6">
-                <div class="card-header">Données professionnelles</div>
+
+        <div class="col-xl-6">
+            <div class="card mb-4">
+                <div class="card-header">Données Professionnelles</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-xl-6">Date d'engagement {{ hiring_date }}</div>
+                        <div class="col-xl-6">Supérieur/e {{ supervisor }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6">Fonction {{ phone_number }}</div>
+                        <div class="col-xl-6">Taux {{ percentage }}</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
