task list and new task finished
- new task add time to work_time

--- a/code/employees_mgmt_app/app/static/css/custom_styles.css
+++ b/code/employees_mgmt_app/app/static/css/custom_styles.css
@@ -1,4 +1,10 @@
-/* TODO: Header ou pas ?????? */
+/*
+* File: custom_styles.css
+* Author: Nithujan Jegatheeswaran
+* Brief: 
+* Version: 22.03.2022
+*/
+
 #logo{
     width: 50px;
     height: 45px;
