--- a/code/employees_mgmt_app/app/templates/employees_list.html
+++ b/code/employees_mgmt_app/app/templates/employees_list.html
@@ -1,3 +1,9 @@
+<!--
+ * File: employees_list.html
+ * Author: Nithujan Jegatheeswaran
+ * Brief:
+ * Version: ???
+ -->
 {% extends 'gabarit.html' %}
 
 {% block title %}Liste des Employés{% endblock title %}
