--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -1,3 +1,9 @@
+<!--
+ * File: index.html
+ * Author: Nithujan Jegatheeswaran
+ * Brief:
+ * Version: ???
+ -->
 {% extends 'gabarit.html' %}
 
 {% block title %}Index{% endblock title %}
