--- a/code/employees_mgmt_app/app/templates/login.html
+++ b/code/employees_mgmt_app/app/templates/login.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+ * File: login.html
+ * Author: Nithujan Jegatheeswaran
+ * Brief:
+ * Version: 22.03.2022
+ -->
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +13,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </head>
 <body class="bg-primary">
-{% include 'top_navbar_login.html' %}
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <!-- Navbar Brand-->
+    <a class="navbar-brand ps-3" href="#">Entreprise ABC</a>
+</nav>
 <div id="layoutAuthentication">
     <div id="layoutAuthentication_content">
         <main>
