--- a/code/employees_mgmt_app/app/templates/new_task.html
+++ b/code/employees_mgmt_app/app/templates/new_task.html
@@ -1,3 +1,9 @@
+<!--
+ * File: new_task.html
+ * Author: Nithujan Jegatheeswaran
+ * Brief:
+ * Version: ???
+ -->
 {% extends 'gabarit.html' %}
 
 {% block title %}Nouvelle Tâche{% endblock title %}
