--- a/code/employees_mgmt_app/app/templates/payslips.html
+++ b/code/employees_mgmt_app/app/templates/payslips.html
@@ -1,3 +1,9 @@
+<!--
+ * File: payslips.html
+ * Author: Nithujan Jegatheeswaran
+ * Brief:
+ * Version: ????
+ -->
 {% extends 'gabarit.html' %}
 
 {% block title %}Fiches de salaire{% endblock title %}
