--- a/code/employees_mgmt_app/app/templates/tasks_list.html
+++ b/code/employees_mgmt_app/app/templates/tasks_list.html
@@ -1,3 +1,9 @@
+<!--
+ * File: tasks_list.html
+ * Author: Nithujan Jegatheeswaran
+ * Brief:
+ * Version: ????
+ -->
 {% extends 'gabarit.html' %}
 
 {% block title %}Liste des Tâches{% endblock title %}
@@ -12,7 +18,7 @@
             <div class="card mb-4">
                 <div class="card-header">Tâches Effectuées Durant Ce Mois</div>
                 <div class="card-body">
-                    <table id="datatablesSimple">
+                    <table id="datatablesSimple" class="table table-striped">
                         <thead>
                         <tr>
                             <th>Projet</th>
@@ -25,18 +31,20 @@
                         </thead>
                         <tbody>
                         {% for task in list %}
-                            <tr>
-                                <td>{{ task['project'] }}</td>
-                                <td>{{ task['title'] }}</td>
-                                <td>{{ task['since'].strftime('%H:%M') }}</td>
-                                <td>{{ task['until'].strftime('%H:%M') }}</td>
-                                <td>{{ task['until'].strftime('%d-%m-%Y') }}</td>
-                                <td>
-                                    <a href="{{ url_for('edit_task', task_id=task['id']) }}">
-                                        <i class="far fa-pencil"></i>
-                                    </a>
-                                </td>
-                            </tr>
+                            {% if task['validation'] == 0 %}
+                                <tr>
+                                    <td>{{ task['project'] }}</td>
+                                    <td>{{ task['title'] }}</td>
+                                    <td>{{ task['since'].strftime('%H:%M') }}</td>
+                                    <td>{{ task['until'].strftime('%H:%M') }}</td>
+                                    <td>{{ task['until'].strftime('%d-%m-%Y') }}</td>
+                                    <td class="text-center">
+                                        <a href="{{ url_for('edit_task', task_id=task['id']) }}">
+                                            <i class="fas fa-edit"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            {% endif %}
                         {% endfor %}
                         </tbody>
                     </table>
