--- a/code/employees_mgmt_app/app/templates/index.html
+++ b/code/employees_mgmt_app/app/templates/index.html
@@ -82,8 +82,18 @@
                         </div>
                         <div class="row">
                             <div class="col-xl-6">
+                                <div class="fst-italic fw-bold text-primary">Département</div>
+                                {{ data['department'] }}
+                            </div>
+                            <div class="col-xl-6">
                                 <div class="fst-italic fw-bold text-primary">Fonction</div>
-                                {{ data[''] }}
+                                {{ data['job'] }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <div class="fst-italic fw-bold text-primary">Salaire</div>
+                                {{ data['salary'] }} CHF
                             </div>
                             <div class="col-xl-6">
                                 <div class="fst-italic fw-bold text-primary">Taux</div>
