update employee's work_time

--- a/code/employees_mgmt_app/app/templates/edit_task.html
+++ b/code/employees_mgmt_app/app/templates/edit_task.html
@@ -30,7 +30,7 @@
             <div class="card mb-4">
                 <div class="card-header">Informations sur la tâche</div>
                 <div class="card-body">
-                    <form action="{{ url_for('new_task') }}" method="post">
+                    <form action="{{ url_for('edit_task') }}" method="post">
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="mb-3">
