--- a/code/employees_mgmt_app/app/templates/header_nav_footer.html
+++ b/code/employees_mgmt_app/app/templates/header_nav_footer.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
 <!--
- * File: gabarit.html
+ * File: header_nav_footer.html
  * Author: Nithujan Jegatheeswaran
- * Brief:
- * Version: ????
+ * Brief: Main template containing the website's header, navigation bar and footer
+ * Version: 28.03.2022
  -->
+
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -13,6 +14,7 @@
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/custom_styles.css') }}" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
+    <script src="https://kit.fontawesome.com/90ed8db92f.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -25,7 +27,8 @@
     <ul class="navbar-nav ms-auto me-0 me-md-3 my-2 my-md-0">
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
-               aria-expanded="false">{{ session['firstname'] }} {{ session['lastname'] }} <i class="fas fa-user fa-fw"></i></a>
+               aria-expanded="false">{{ email }}
+                <i class="fas fa-user fa-fw"></i></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
             </ul>
@@ -39,21 +42,31 @@
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Menu</div>
                     <a class="nav-link" href="{{ url_for('index') }}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-user fa-lg"></i></div>
                         Profil
                     </a>
-                    <a class="nav-link" href="{{ url_for('tasks_list', email=email) }}">
+                    <a class="nav-link" href="{{ url_for('task_list', email=email) }}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-list fa-lg"></i></div>
                         Liste des tâches
                     </a>
                     <a class="nav-link" href="{{ url_for('new_task') }}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-plus fa-lg"></i></div>
                         Nouvelle tâche
                     </a>
                     <a class="nav-link" href="{{ url_for('payslips') }}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-folder-open fa-lg"></i></div>
                         Fiches de salaire
                     </a>
                     {% if is_hr_employee %}
-                    <div class="sb-sidenav-menu-heading">Gestion des employés</div>
-                        <a class="nav-link" href="#">Liste des employés</a>
-                        <a class="nav-link" href="#">Nouvel/le employé/e</a>
+                        <div class="sb-sidenav-menu-heading">Gestion des employés</div>
+                        <a class="nav-link" href="{{ url_for('employee_list') }}">
+                            <div class="sb-nav-link-icon"><i class="fas fa-list fa-lg"></i></div>
+                            Liste des employés
+                        </a>
+                        <a class="nav-link" href="{{ url_for('new_employee') }}">
+                            <div class="sb-nav-link-icon"><i class="fas fa-user-plus fa-lg"></i></div>
+                            Nouvel/le employé/e
+                        </a>
                     {% endif %}
                 </div>
             </div>
