--- a/code/employees_mgmt_app/app/templates/new_task.html
+++ b/code/employees_mgmt_app/app/templates/new_task.html
@@ -1,69 +1,61 @@
 <!--
  * File: new_task.html
  * Author: Nithujan Jegatheeswaran
- * Brief:
- * Version: ???
+ * Brief: Template containing the form used to add a new finished task to the database
+ * Version: 28.03.2022
  -->
-{% extends 'gabarit.html' %}
 
-{% block title %}Nouvelle Tâche{% endblock title %}
+{% extends 'header_nav_footer.html' %}
+
+{% block title %}Nouvelle tâche{% endblock title %}
 
 {% block content %}
-    <h1 class="mt-4">Entrer Une Nouvelle Tâche Terminée</h1>
+    <h1 class="mt-4">Ajouter une nouvelle tâche terminée{% block page_title %}{% endblock page_title %}</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Nouvelle Tâche</li>
+        <li class="breadcrumb-item active">Nouvelle tâche</li>
     </ol>
     <div class="row">
-        {% if errors %}
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <div class="card-header text-danger">Erreur/s</div>
-                    <div class="card-body">
-                        {% for error in errors %}
-                            {{ error }} <br>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
+        {% if error_list %}
+            {% include 'error_messages.html' %}
         {% endif %}
         <div class="col-md-12">
             <div class="card mb-4">
                 <div class="card-header">Informations sur la tâche</div>
                 <div class="card-body">
-                    <form action="{{ url_for('new_task') }}" method="post">
+                    <form action="{{ url_for('new_task') }}" method="post" enctype="multipart/form-data">
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="mb-3">
-                                    <label class="form-label" for="project">Projet</label>
+                                    <label for="project" class="form-label" >Projet</label>
                                     <input type="text" id="project" name="project" class="form-control"
-                                            {% if form %} value="{{ form['project'] }}" {% endif %}>
+                                            {% if form %} value="{{ form.project }}" {% endif %}>
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label" for="title">Titre</label>
+                                    <label for="title" class="form-label" >Titre</label>
                                     <input type="text" id="title" name="title" class="form-control" {% if form %}
-                                           value="{{ form['title'] }}" {% endif %}>
+                                           value="{{ form.title }}" {% endif %}>
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label" for="since">Heure de début</label>
+                                    <label for="since" class="form-label" >Heure de début</label>
                                     <input type="time" id="since" name="since" class="form-control" {% if form %}
-                                           value="{{ form['since'] }}" {% endif %}>
+                                           value="{{ form.since }}" {% endif %}>
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label" for="until">Heure de fin</label>
+                                    <label for="until" class="form-label" >Heure de fin</label>
                                     <input type="time" id="until" name="until" class="form-control" {% if form %}
-                                           value="{{ form['until'] }}" {% endif %}>
+                                           value="{{ form.until }}" {% endif %}>
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label" for="date">Date</label>
+                                    <label for="date" class="form-label" >Date</label>
                                     <input type="date" id="date" name="date" class="form-control" {% if form %}
-                                           value="{{ form['date'] }}" {% endif %}>
+                                           value="{{ form.date }}" {% endif %} min="2000-01-01" max="2099-12-31">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="mb-3">
-                                    <label class="form-label" for="description">Description</label>
+                                    <label for="description" class="form-label" >Description</label>
                                     <textarea id="description" name="description" class="form-control">{% if form %}
-                                        {% if form['description'] %} {{ form['description'] }}
+                                        {% if form.description %} {{ form.description }}
                                         {% endif %}{% endif %}</textarea>
                                 </div>
                                 <input type="submit" class="form-control bg-dark text-white" value="Valider">
